fix: add bootstrap media breakpoint, text-align

--- a/src/features/main-page/features-section/FeaturesSection.module.scss
+++ b/src/features/main-page/features-section/FeaturesSection.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   width: 52rem;
   margin: auto;
+  padding-bottom:3rem;
 }
 
 @media (max-width: 1024px) and (min-width: 769px) {
