--- a/src/features/main-page/features-section/feature/Feature.module.scss
+++ b/src/features/main-page/features-section/feature/Feature.module.scss
@@ -1,3 +1,10 @@
+@import '../../../../../node_modules/bootstrap/scss/bootstrap.scss';
+@import "../../../../../node_modules/bootstrap/scss/functions";
+@import "../../../../../node_modules/bootstrap/scss/variables";
+@import "../../../../../node_modules/bootstrap/scss/maps";
+@import "../../../../../node_modules/bootstrap/scss/mixins";
+@import "../../../../../node_modules/bootstrap/scss/utilities";
+
   .featurePositionLeft {
     display: flex;
     width: 52rem;
@@ -46,9 +53,8 @@
     justify-content: center;
   }
 
-  @media (max-width: 1024px) and (min-width: 769px) {
-
-    .featureLeft, .featureRight {
+  @include media-breakpoint-down(xl){
+    .featurePositionLeft, .featurePositionRight {
       width: 42rem;
     }
 
@@ -57,9 +63,18 @@
     }
   }
 
-  @media (max-width: 768px) {
+  @include media-breakpoint-down(md){
+    .featurePositionLeft, .featurePositionRight {
+      width: 36rem;
+    }
 
-    .featureLeft, .featureRight {
+    .featureCardLeft, .featureCardRight{
+      width: 20.5rem;
+    }
+  }
+
+  @include media-breakpoint-down(sm){
+    .featurePositionLeft, .featurePositionRight {
       width: 32rem;
     }
 
@@ -67,3 +82,15 @@
       width: 18.5rem;
     }
   }
+
+
+  // @media (max-width: 768px) {
+
+  //   .featureLeft, .featureRight {
+  //     width: 32rem;
+  //   }
+
+  //   .featureCardLeft, .featureCardRight{
+  //     width: 18.5rem;
+  //   }
+  // }
